# api-rating

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
agent_eval/: __init__.py  assistant.py  cli.py  config.py  evaluator.py  experiments.py  llm.py  models.py  presets.py  runners.py  seed.py  storage.py  tools.py  utils.py  web.py
agent_eval/assets/corpus/: fastapi.md  qwen_dashscope.md  sqlite.md
agent_eval/static/: styles.css
agent_eval/templates/: assistant.html  base.html  dashboard.html  experiment_detail.html  experiments.html  failures.html  leaderboard.html  run_detail.html
scripts/: generate_readme_assets.py
tests/: conftest.py  test_assistant.py  test_runner.py  test_seed.py  test_web.py
